pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotAmendFixedProperty1.pkl
class Bird {
  name: String
}

class Nest {
  fixed bird = new Bird {
    name = "Hawk"
  }
}

n: Nest = new {
  bird {
    name = "Eagle"
  }
}
